# project-graph

./: .gitignore  .lintstagedrc  .oxlintrc.json  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vitest.config.ts  wrangler.toml  文本节点功能分析.md
.claude/skills/settings/: SKILL.md
.cursor/rules/: rules.md
.cursor/skills/create-keybind/: SKILL.md
.cursor/skills/create-setting-item/: SKILL.md
.github/: FUNDING.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: config.yml
.github/scripts/: generate-changelog.mjs  generate-pkgbuild.mjs  set-aha-features.mjs
.github/workflows/: canary.yml  nightly.yml  publish.yml  release.yml
.trae/documents/: plan_20251223_165257.md  plan_20260101_170503.md  为RecentFilesWindow添加独立的隐私模式功能.md  优化Tab键和反斜杠键创建节点的字体大小.md  优化嫁接操作与添加反向操作.md  优化文本节点渲染判断逻辑.md  修复Ctrl+T快捷键只能触发一个功能的问题.md  修复引用块转换时连线悬空问题.md  全局快捷键重构方案.md  在快捷键设置页面添加重置所有快捷键按钮.md  实现Section框大标题相机缩放阈值控制.md  实现图片节点拖拽缩放功能.md  实现引用块节点的精准连线定位.md  实现快捷编辑功能系列.md  实现快捷键开关功能.md  实现搜索范围选项.md  实现背景图片功能和背景管理器.md  引用块节点精准连线定位功能问题记录.md  添加大标题遮罩透明度设置.md  添加快捷键冲突检测和提醒功能.md  粘贴bug崩溃报告.txt
.trae/skills/create-keybind/: SKILL.md
.trae/skills/create-setting-item/: SKILL.md
.trae/skills/manage-translations/: SKILL.md
.zed/: settings.json
app/: README.md  components.json  index.html  package.json  project.json  proxy.html  splash.html  tsconfig.json  tsconfig.node.json  vite.config.ts
app/scripts/: collect-cef-linux.js  sync-locales.ts
app/src/: App.tsx  CommandPalette.tsx  DropWindowCover.tsx  Fallback.tsx  ProjectTabs.tsx  db.tsx  main.tsx  state.tsx  vite-env.d.ts
app/src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json
app/src-tauri/.cargo/: config.toml
app/src-tauri/capabilities/: default.json  desktop.json
app/src-tauri/src/: ipc_bridge.rs  lib.rs  qt_app.cpp  qt_app.h  qt_app_ffi.rs
app/src-tauri/src/cmd/: device.rs  mcp.rs  mod.rs  paddle.rs  save.rs
app/src/assets/: versions.json
app/src/components/: app-version.tsx  context-menu-content.tsx  docked-area.tsx  floating-tabs.tsx  global-menu-content.tsx  key-tooltip.tsx  overlay-host.tsx  pie-menu.tsx  render-sub-windows.tsx  right-toolbar.tsx  tab-context-menu.tsx  theme-mode-switch.tsx  toolbar-content.tsx  welcome-page.tsx
app/src/components/ai-elements/: artifact.tsx  chain-of-thought.tsx  checkpoint.tsx  code-block.tsx  confirmation.tsx  context.tsx  controls.tsx  conversation.tsx  edge.tsx  image.tsx  inline-citation.tsx  loader.tsx  message.tsx  model-selector.tsx  node.tsx  open-in-chat.tsx  panel.tsx  plan.tsx  prompt-input.tsx  queue.tsx  reasoning.tsx  shimmer.tsx  sources.tsx  suggestion.tsx  task.tsx  tool.tsx  toolbar.tsx  web-preview.tsx
app/src/components/ui/: badge.tsx  button-group.tsx  button.tsx  card.tsx  carousel.tsx  command.tsx  dialog.tsx  editor-static.tsx  editor.tsx  empty.tsx  field.tsx  fixed-toolbar.tsx  flip-words.tsx  hover-card.tsx  input-group.tsx  key-bind.tsx  label.tsx  markdown.tsx  menubar.tsx  progress.tsx  scroll-area.tsx  sidebar.tsx  table.tsx  tabs.tsx  tooltip.tsx
app/src/core/: MyWheelPlugin.tsx  Project.tsx  Tab.tsx  TabGroup.test.ts  TabGroup.ts  TabWorkspace.tsx  TestTab.tsx  loadAllServices.tsx  subWindowOpen.ts  subWindowOpenModes.ts
app/src/core/algorithm/: graphStructureAnalysis.tsx
app/src/core/extension/: Extension.tsx  ExtensionKeyBindManager.tsx  ExtensionManager.tsx  ExtensionObjectRegistry.tsx  ExtensionRuntime.tsx
app/src/core/fileSystemProvider/: FileSystemProviderCollab.tsx  FileSystemProviderDraft.tsx  FileSystemProviderFile.tsx  FileSystemProviderHttp.tsx  FileSystemProviderTest.tsx  index.tsx
app/src/css/: index.css
app/src/examples/: tauri-global-shortcut-guide.md
app/src/locales/: README.md  en.yml  id.yml  zh_CN.yml  zh_TW.yml  zh_TWC.yml
app/src/mocks/: app.tsx  index.tsx  os.tsx  store.tsx  window.tsx
app/src/sub/: AIToolsWindow.tsx  AIWindow.tsx  AttachmentsWindow.tsx  AutoCompleteWindow.tsx  AutoComputeWindow.tsx  BackgroundManagerWindow.tsx  CollaborationWindow.tsx  ColorPaletteWindow.tsx  ColorWindow.tsx  CommandPaletteWindow.tsx  EditUrlNodeLinkWindow.tsx  ExportPngWindow.tsx  FindWindow.tsx  FormWindow.tsx  GenerateNodeWindow.tsx  KeyboardRecentFilesWindow.tsx  LatexEditWindow.tsx  NewExportPngWindow.tsx  NodeDetailsWindow.tsx  OnboardingWindow.tsx  OutlineWindow.tsx  RecentFilesWindow.tsx  ReferencesWindow.tsx  TagWindow.tsx  TestWindow.tsx  TextImportWindow.tsx  WelcomeWindow.tsx
app/src/themes/: catppuccin-frappe.yml  catppuccin-latte.yml  catppuccin-macchiato.yml  catppuccin-mocha.yml  dark-blue.pg-theme  dark-blue.yml  dark.pg-theme  dark.yml  light.yml  macaron.yml  morandi.yml  park.yml
app/src/types/: cursors.tsx  directions.tsx  node.tsx
app/src/utils/: bezier.tsx  dateChecker.tsx  emacs.tsx  externalOpen.tsx  font.tsx  hitokoto.tsx  imageExport.tsx  oklch.tsx  on.tsx  path.tsx  pathString.tsx  platform.tsx  svg.tsx  time.tsx  treeValidation.tsx
app/vite-plugins/: i18n-auto-tw.ts
crates/project_graph/: Cargo.toml  Trunk.toml  build.rs  index.html
crates/project_graph/src/: app.rs  fonts.rs  lib.rs  main.rs  native.rs  settings.rs  settings_window.rs  smooth_value.rs  stage.rs  structs.rs  terminal.rs  themes.rs  utils.rs
crates/project_graph/src/stage/: camera.rs  context.rs  elements.rs  render_context.rs  structs.rs
crates/project_graph/src/stage/elements/: connections.rs  containers.rs  entities.rs
crates/project_graph/src/stage/elements/connections/: edge.rs
crates/project_graph/src/stage/elements/entities/: text.rs
crates/project_graph/src/utils/: jni.rs  kdl.rs  text.rs
docker/: Dockerfile  nginx.conf
docs/: book.toml  mdx-components.tsx  package.json  style.css
docs-pg/: ProjectGraph开发进程图.prg
docs/app/: global.css  layout.tsx
docs/app/components/: Bilibili.tsx
docs/src/: 404.md  README.md  SUMMARY.md
docs/superpowers/plans/: 2026-07-14-ai-sdk-mcp-skills.md  2026-07-14-mcp-json-stdio.md
docs/superpowers/specs/: 2026-07-14-mcp-json-stdio-design.md
scripts/: barrel.ts  cleanDeps.ts
(+334 files in other folders)
