[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.0-dev"
edition = "2024"

[workspace.dependencies]
# build-dependencies
cfg_aliases = "0.1.0"

# GUI 框架与 UI 渲染
egui = { git = "https://github.com/emilk/egui", features = ["mint"] }
eframe = { git = "https://github.com/emilk/egui", features = [
    "wgpu",
    "persistence",
] }
egui_extras = { git = "https://github.com/emilk/egui", features = [
    "all_loaders",
] }
lucide-icons = "0.563.0"

# 序列化与多态支持
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
knus = { git = "https://github.com/TheLostLambda/knus", branch = "kdl2" }
typetag = "0.2.21"
dyn-clone = "1.0.20"
once_cell = "1.21.3"
enum_dispatch = "0.3.13"

# 资源处理 (图片与字体)
image = { version = "0.25.9", features = ["jpeg", "png"] }
font-kit = "0.14.3"

# 实用工具与随机数
rand = "0.9.2"
nanoid = "0.4.0"
lru = "0.16.3"

# 日志与调试
log = "0.4.29"
env_logger = "0.11.8"
miette = { version = "7.6.0", features = ["fancy"] }

# WebAssembly 支持
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
web-sys = { version = "0.3.85", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "console",
    "Element",
] }
# 针对旧版本 (0.2.x) 的依赖库
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
# 针对新版本 (0.3.x) 的依赖库
# 注意：0.3 版本取消了 "js" feature，改为通过编译器 flag 开启，
# 但为了保险，我们先在声明里加上 wasm_js（如果将来版本有变动）
getrandom = { version = "0.3", features = ["wasm_js"] }

# Android 支持
android-activity = { version = "0.6.0", features = ["native-activity"] }
android_logger = "0.15.1"
jni = "0.21.1"
ndk-context = "0.1.1"
