[package]
name = "project_graph"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "project_graph_app"
path = "src/main.rs"

[package.metadata.android]
package = "dev.graphif.prg"
label = "Project Graph"

[package.metadata.android.sdk]
min_sdk_version = 24
target_sdk_version = 36

[package.metadata.android.application]
theme = "@android:style/Theme.Black.NoTitleBar.Fullscreen"

[build-dependencies]
cfg_aliases.workspace = true

[dependencies]
egui.workspace = true
eframe.workspace = true
log.workspace = true
lucide-icons.workspace = true
rand.workspace = true
egui_extras.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true
nanoid.workspace = true
typetag.workspace = true
dyn-clone.workspace = true

[target.'cfg(not(any(target_os = "android", target_arch = "wasm32")))'.dependencies]
font-kit.workspace = true
env_logger.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom.workspace = true
getrandom_02.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
android-activity.workspace = true
android_logger.workspace = true
